Fixed program homepage alignment bug

--- a/a/main.css
+++ b/a/main.css
@@ -106,6 +106,7 @@ h2 small { margin: .2em .2em 0 0 }
 .user a { display: block }
 .program {
 	display: inline-block;
+	vertical-align: top;
 	max-width: 95%;
 }
 .program div {
